basic html done for recipes sites for now. added 3 recipres linked to different html files

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,10 +10,13 @@
 
 <body>
     <h1>Lasagna</h1> 
-    <img src="./lasagna.jpeg" alt="A slice of Lasagna">
+    <img src="/home/benjamin/repos/odin-recipes/food-images/lasagna.jpeg" alt="A slice of Lasagna">
     <h5>Such a delicious lasagna!</h5>
     <p><strong>Red</strong> and <strong>delicious</strong> my <em>boieeee</em></p>
     <h2>Ingredients</h2>
+    <ul><li>noodles</li><li>sauce</li><li>meat</li></ul>
+    <h2>Steps</h2>
+    <ol><li>boil noodles</li><li>cook meat</li><li>bake</li></ol>
 
 </body>
 
