--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <h1>Odin Recipes</h1><img src = ""> 
-    <a href = "./recipes/lasagna.html"> Lasagna</a>
+    <ul>
+    <li><a href = "./recipes/lasagna.html"> Lasagna</a></li>
+    <li><a href = "./recipes/fried-eggs.html"> Fried Eggs</a></li>
+    <li><a href = "./recipes/ham-sandwhich.html">Ham Sandwhich</a></li>
+    </ul>
 </body>
 </html>
