--- a/recipes/fried-eggs.html
+++ b/recipes/fried-eggs.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Fried Eggs</h1> 
-    <img src="odin-recipes/food-images/fried-eggs.jpeg" alt="2 fried eggs">
+    <img src="food-images/fried-eggs.jpeg" alt="2 fried eggs">
     <h5>goodmorning beautifuls!</h5>
     <p><strong>yolky</strong> and <strong>delicious</strong> my <em>boieeee</em></p>
     <h2>Ingredients</h2>
