--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Lasagna</h1> 
-    <img src="~/odin-recipes/images/lasagna.jpeg" alt="A slice of Lasagna">
+    <img src="/home/benjamin/repos/odin-recipes/recipes/lasagna.html" alt="A slice of Lasagna">
     <h5>Such a delicious lasagna!</h5>
     <p><strong>Red</strong> and <strong>delicious</strong> my <em>boieeee</em></p>
     <h2>Ingredients</h2>
