--- a/recipes/ham-sandwhich.html
+++ b/recipes/ham-sandwhich.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,7 @@
 
 <body>
     <h1>Ham Sandwhich</h1>
-    <img src="odin-recipes/food-images/ham-sandwhich.jpeg" alt="a ham sandwhich">
+    <img src="../images/ham-sandwhich.jpeg" alt="a ham sandwhich">
     <h5>a quick lunch</h5>
     <p><strong>simple</strong> and <strong>satisfying</strong> my <em>boieeee</em></p>
     <h2>Ingredients</h2>
