--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Odin Recipes</h1><img src = ""> 
     <ul>
     <li><a href = "./recipes/lasagna.html"> Lasagna</a></li>
-    <li><a href = "./recipes/fried-eggs.html"> Fried Eggs</a></li>
+    <li><a href = "fried-eggs.html"> Fried Eggs</a></li>
     <li><a href = "./recipes/ham-sandwhich.html">Ham Sandwhich</a></li>
     </ul>
 </body>
