asdfile:///home/benjamin/repos/odin-recipes

--- a/fried-eggs.html
+++ b/fried-eggs.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Fried Eggs</h1> 
-    <img src="file:///home/benjamin/repos/odin-recipes/images/fried-eggsq.jpeg" alt="2 fried eggs">
+    <img src="../images/fried-eggsq.jpeg" alt="2 fried eggs">
     <h5>goodmorning beautifuls!</h5>
     <p><strong>yolky</strong> and <strong>delicious</strong> my <em>boieeee</em></p>
     <h2>Ingredients</h2>
